[Bug #19100] Add `init_int32` function to `rb_random_interface_t`

Distinguish initialization by single word from initialization by
array.