include/ruby/random.h
@@ -19,7 +19,7 @@
 /*
  * version
  * 0: before versioning; deprecated
- * 1: added version and flags
+ * 1: added version, flags and init_32bit function
  */
 #define RUBY_RANDOM_INTERFACE_VERSION_MAJOR 1
 #define RUBY_RANDOM_INTERFACE_VERSION_MINOR 0
@@ -65,6 +65,17 @@ RBIMPL_ATTR_NONNULL(())
  * @post        `rng` is initialised using the passed seeds.
  */
 typedef void rb_random_init_func(rb_random_t *rng, const uint32_t *buf, size_t len);
+
+RBIMPL_ATTR_NONNULL(())
+/**
+ * This is the type of functions called when your random object is initialised.
+ * Passed data is the seed integer.
+ *
+ * @param[out]  rng  Your random struct to fill in.
+ * @param[in]   data Seed, single word.
+ * @post        `rng` is initialised using the passed seeds.
+ */
+typedef void rb_random_init_int32_func(rb_random_t *rng, uint32_t data);
 
 RBIMPL_ATTR_NONNULL(())
 /**
@@ -116,8 +127,11 @@ typedef struct {
      */
     uint16_t flags;
 
-    /** Initialiser function. */
+    /** Function to initialize from uint32_t array. */
     rb_random_init_func *init;
+
+    /** Function to initialize from single uint32_t. */
+    rb_random_init_int32_func *init_int32;
 
     /** Function to obtain a random integer. */
     rb_random_get_int32_func *get_int32;
@@ -162,11 +176,12 @@ typedef struct {
 } rb_random_interface_t;
 
 /**
- * This utility macro defines  3 functions named prefix_init, prefix_get_int32,
- * prefix_get_bytes.
+ * This utility macro defines 4 functions named prefix_init, prefix_init_int32,
+ * prefix_get_int32, prefix_get_bytes.
  */
 #define RB_RANDOM_INTERFACE_DECLARE(prefix) \
     static void prefix##_init(rb_random_t *, const uint32_t *, size_t); \
+    static void prefix##_init_int32(rb_random_t *, uint32_t); \
     static unsigned int prefix##_get_int32(rb_random_t *); \
     static void prefix##_get_bytes(rb_random_t *, void *, size_t)
 
@@ -195,6 +210,7 @@ typedef struct {
 #define RB_RANDOM_INTERFACE_DEFINE(prefix) \
     RUBY_RANDOM_INTERFACE_VERSION_INITIALIZER, 0, \
     prefix##_init, \
+    prefix##_init_int32, \
     prefix##_get_int32, \
     prefix##_get_bytes
 
@@ -205,6 +221,12 @@ typedef struct {
 #define RB_RANDOM_INTERFACE_DEFINE_WITH_REAL(prefix) \
     RB_RANDOM_INTERFACE_DEFINE(prefix), \
     prefix##_get_real
+
+#define RB_RANDOM_DEFINE_INIT_INT32_FUNC(prefix) \
+    static void prefix##_init_int32(rb_random_t *rnd, uint32_t data) \
+    { \
+        prefix##_init(rnd, &data, 1); \
+    }
 
 #if defined _WIN32 && !defined __CYGWIN__
 typedef rb_data_type_t rb_random_data_type_t;
